--- a/todo_list/todo.css
+++ b/todo_list/todo.css
@@ -3,7 +3,7 @@ body {
     flex-wrap: nowrap;
     justify-content: center;
     background-color: #F5F5F5;
-    min-height: 100%;
+    min-height: 100vh;
 }
 
 .todo-wrapper {
